--- a/LensCreditCardsDemo/app/build.gradle
+++ b/LensCreditCardsDemo/app/build.gradle
@@ -24,7 +24,7 @@ android {
     }
 
     buildFeatures {
-        dataBinding true
+        viewBinding true
     }
 
     compileOptions {
@@ -49,4 +49,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.5.7.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
+    implementation 'com.github.lriccardo:TimelineView:1.1.2'
 }
