--- a/LensCreditCardsDemo/app/src/main/AndroidManifest.xml
+++ b/LensCreditCardsDemo/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppThemeMD3"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name="com.veryfi.lens.credit.cards.demo.MainActivity"
@@ -20,6 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".logs.LogsActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
     </application>
 
 </manifest>
