--- a/LensCreditCardsDemo/app/build.gradle
+++ b/LensCreditCardsDemo/app/build.gradle
@@ -5,11 +5,11 @@ plugins{
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.veryfi.lens.credit.cards.demo"
-        minSdkVersion 21
-        targetSdkVersion 32
+        minSdkVersion 23
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -20,7 +20,7 @@ android {
     }
 
     androidResources {
-        noCompress "tflite"
+        noCompress "veryfi"
     }
 
     buildFeatures {
@@ -43,11 +43,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.veryfi.lens.credit.cards.demo'
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.5.7.4'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.6.0.6'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
