--- a/LensCreditCardsDemo/app/src/main/AndroidManifest.xml
+++ b/LensCreditCardsDemo/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.veryfi.lens.credit.cards.demo">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:name="com.veryfi.lens.credit.cards.demo.Application"
@@ -11,12 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemeMD3"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        
         <activity
             android:name="com.veryfi.lens.credit.cards.demo.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
