--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
     implementation 'com.github.lriccardo:TimelineView:1.1.2'
+    implementation 'com.github.pvarry:android-json-viewer:v1.1'
 }
