LP-1012: Updated Android Lens to 1.7.3.23

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins{
 }
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         applicationId "com.veryfi.lens.credit.cards.demo"
         minSdkVersion 23
@@ -25,6 +25,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     compileOptions {
@@ -56,5 +57,5 @@ dependencies {
     implementation 'com.github.pvarry:android-json-viewer:v1.1'
 
     // Veryfi lens
-    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.7.3.22'
+    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.7.3.23'
 }
