--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     }
 
     androidResources {
-        noCompress "veryfi"
+        noCompress += "veryfi"
     }
 
     buildFeatures {
@@ -29,12 +29,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "17"
     }
 
     buildTypes {
@@ -48,14 +48,14 @@ android {
 }
 
 dependencies {
+    // Veryfi lens
+    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:2.0.0.1'
+
     // noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.github.martin-stone:hsv-alpha-color-picker-android:3.0.1'
     implementation 'com.github.lriccardo:TimelineView:1.1.2'
     implementation 'com.github.pvarry:android-json-viewer:v1.1'
-
-    // Veryfi lens
-    implementation 'com.veryfi.lens:veryfi-lens-credit-cards-sdk:1.7.3.37'
 }
